[gd_scene load_steps=4 format=3 uid="uid://doucqxytqeq5p"]

[ext_resource type="Texture2D" uid="uid://b3jwtdvx08euw" path="res://assets/inventorySlot.png" id="1_16t0y"]
[ext_resource type="Script" path="res://bag/Inventory_Slot.gd" id="1_k4b6f"]
[ext_resource type="PackedScene" uid="uid://cqma2xpvb3bqe" path="res://bag/Inventory_Cell.tscn" id="3_jjvi8"]

[node name="InventorySolt" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_left = -22.0
offset_top = -20.0
offset_right = 22.0
offset_bottom = 24.0
script = ExtResource("1_k4b6f")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="background" type="Sprite2D" parent="CenterContainer"]
unique_name_in_owner = true
position = Vector2(50.125, 49.125)
scale = Vector2(4.8875, 4.8875)
texture = ExtResource("1_16t0y")
vframes = 2

[node name="inventoryCell" parent="." instance=ExtResource("3_jjvi8")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="state_change" from="inventoryCell" to="." method="_on_inventory_cell_state_change"]
